Fixed some of the resizing and overflow problems

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
   border-radius: 5px;
   box-shadow: 0 20px 35px rgba(60, 60, 60, 0.5);
   z-index: -1;
+  overflow: auto;
 }
 
 .wrapper {
@@ -51,6 +52,9 @@ body {
   line-height: 35px;
   text-align: justify;
   margin-top: 30px;
+  max-width: 100%;
+  max-height: 300px;
+  overflow: auto;
 }
 
 .overlay {
@@ -64,12 +68,14 @@ body {
 }
 
 .overlay textarea {
-  width: 80%;
-  height: 60%;
+  width: 900px;
+  height: 400px;
   font-family: "Rubik", sans-serif;
-  padding: 10px 10px;
+  padding: 10px;
   font-weight: 300;
   font-size: 20px;
+  resize: none;
+  overflow: auto;
 }
 
 .btn {
